Adiciones para incluir

--- a/MARY1/DIOS.HTML
+++ b/MARY1/DIOS.HTML
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <tite>Maximo segundo cambio</tite>
+    <table style="border: 1px solid black;">
+        <tr>
+            <th>Color</th>
+            <th>Descripción</th>
+        </tr>
+        <tr>
+            <th>Azul</th>
+            <th>Camiseta</th>
+        </tr>
+    </table>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DIOSMARY</title>
